Add JDK 27 to the slides
Timeline, cover and palette now go up to JDK 27 (new badge color #64748b).

- new-language-features: preview badges/JEPs bumped for Primitive Types in
  Patterns (532) and Lazy Constants (531)
- new-apis: New APIs (JDK27) slide, PEM Encodings of Cryptographic Objects
  (third preview, 538), Vector API (537) and Structured Concurrency (533)
  preview bumps
- performance: compact object headers enabled by default (534), G1 as the
  default GC in all environments (523), new G1 MinHeapFreeRatio/MaxHeapFreeRatio
  defaults, HashMap.putAll() fast path, AVX2 binary-search intrinsic
- security: post-quantum hybrid key exchange for TLS 1.3 (527), JFR in-process
  data redaction (536), TLS certificate compression, WISeKey truststore
- miscellaneous: JDK 27 tools and diagnostics (jcmd, JSON thread dumps,
  ShenandoahPromotionInformation)
- deprecations-removals: removed JVM options, -XX:InitiatingHeapOccupancyPercent
  renamed to -XX:G1IHOP, obsolete UseCompressedClassPointers, JVMCI removal,
  Serviceability Agent printmdo removal